# autonomy_src

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/locobot_move/share/locobot_move/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/move_arms/lib/move_arms/: send_endeffector_node.py
install/move_arms/share/move_arms/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/move_arms/share/move_arms/cmake/: move_armsConfig.cmake
install/move_without_obstacle/share/move_without_obstacle/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/move_without_obstacle/share/move_without_obstacle/cmake/: move_without_obstacleConfig.cmake
la_msgs/: CMakeLists.txt
la_msgs/action/: MoveArm.action
locobot_autonomy/: CMakeLists.txt  package.xml
locobot_autonomy/launch/: control_arm._launch.py
locobot_autonomy/locobot_autonomy/: arm_commander.py  gripper.py  move_A_to_B_py.py  move_locobot_base_action_server.py  moveit_arm.cpp
locobot_autonomy/src/: move_arm_action_server.cpp  moveit_arm.cpp  visual_block_perception_srv.cpp
locobot_move/: CMakeLists.txt
locobot_move/scripts/: send_velocity_node.py
log/: latest_build
move_arms/: CMakeLists.txt  package.xml
move_arms/scripts/: send_endeffector_node.py
move_without_obstacle/: CMakeLists.txt  package.xml
my_cpp_py_pkg/: CMakeLists.txt  package.xml
my_cpp_py_pkg/src/: cpp_node.cpp
(+3 files in other folders)
